Replace services interfaces, impl, methods for jpa