@@ -1,138 +1,95 @@
 package app.service.impl;
 
 import app.interceptors.LogInvocation;
-import app.repository.UserRepository;
+import app.repository.UserRep;
 import app.repository.entity.User;
-import app.exceptions.DaoException;
 import app.exceptions.ServiceException;
 import app.service.UserService;
 import app.service.dto.UserDto;
 import app.service.util.DigestUtil;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @Service
 public class UserServiceImpl implements UserService {
-    private final UserRepository userRepository;
+    private final UserRep userRep;
+    private final DigestUtil digestUtil;
 
     @LogInvocation
     @Override
     public UserDto create(UserDto userDto) {
-        try {
-            checkCreateExistsByEmail(userDto);
-            String hashedPassword = DigestUtil.INSTANCE.hash(userDto.getPassword());
-            userDto.setPassword(hashedPassword);
-            User user = userRepository.create(toUserEntity(userDto));
-            return toUserDto(user);
-        } catch (DaoException e) {
-            throw new ServiceException(e);
-        }
+        checkCreateExistsByEmail(userDto);
+        String hashedPassword = digestUtil.hash(userDto.getPassword());
+        userDto.setPassword(hashedPassword);
+        User user = userRep.save(toUserEntity(userDto));
+        return toUserDto(user);
     }
 
     @LogInvocation
     @Override
-    public List<UserDto> getAll(int limit, int offset) {
-        try {
-            return userRepository.getAll(limit, offset).stream().map(this::toUserDto).collect(Collectors.toList());
-        } catch (DaoException e) {
-            throw new ServiceException(e);
-        }
+    public List<UserDto> findAll(Pageable pageable) {
+        List<User> users = userRep.findByDeletedFalse(pageable).stream().toList();
+        return users.stream().map(this::toUserDto).collect(Collectors.toList());
     }
 
     @LogInvocation
     @Override
-    public UserDto getById(Long id) {
-        try {
-            if (userRepository.getById(id) == null) {
-                throw new RuntimeException("User with ID:" + id + " is null.");
-            }
-            return toUserDto(userRepository.getById(id));
-        } catch (DaoException e) {
-            throw new ServiceException(e);
+    public UserDto findById(Long id) {
+        Optional<User> user = userRep.findByIdAndDeletedFalse(id);
+        if (user.isEmpty()) {
+            throw new ServiceException("User with id " + id + " doesn't exist");
         }
+        return toUserDto(user.get());
     }
 
     @LogInvocation
     @Override
     public UserDto update(UserDto userDto) {
-        try {
-            User existing = userRepository.getByEmail(userDto.getEmail());
-            if (existing != null && !existing.getId().equals(userDto.getId())) {
-                throw new RuntimeException("User with Email " + userDto.getEmail() + "already exists.");
-            }
-            User user = userRepository.update(toUserEntity(userDto));
-            return toUserDto(user);
-        } catch (DaoException e) {
-            throw new ServiceException(e);
+        Optional<User> existing = userRep.findById(userDto.getId());
+        if (existing.isPresent() && existing.get().getEmail().equals(userDto.getEmail())) {
+            throw new ServiceException("User with email " + userDto.getEmail() + "already exists.");
         }
+        User user = userRep.save(toUserEntity(userDto));
+        return toUserDto(user);
     }
 
     @LogInvocation
     @Override
     public void delete(Long id) {
-        userRepository.delete(id);
+        User user = userRep.findById(id).orElseThrow(() -> new ServiceException("Course doesn't exist"));
+        user.setDeleted(false);
     }
 
     @LogInvocation
     @Override
-    public Integer count() {
-        try {
-            return userRepository.count();
-        } catch (DaoException e) {
-            throw new ServiceException(e);
-        }
+    public Long count() {
+        return userRep.count();
     }
 
     @LogInvocation
     @Override
-    public List<UserDto> getByFirstName(String firstName) {
-        try {
-            return userRepository.getByLastName(firstName).stream().map(this::toUserDto).collect(Collectors.toList());
-        } catch (DaoException e) {
-            throw new ServiceException(e);
-        }
-    }
-
-    @LogInvocation
-    @Override
-    public List<UserDto> getByLastName(String lastName) {
-        try {
-            return userRepository.getByLastName(lastName).stream().map(this::toUserDto).collect(Collectors.toList());
-        } catch (DaoException e) {
-            throw new ServiceException(e);
-        }
-    }
-
-    @LogInvocation
-    @Override
-    public UserDto getByEmail(String email) {
-        try {
-            return toUserDto(userRepository.getByEmail(email));
-        } catch (DaoException e) {
-            throw new ServiceException(e);
-        }
+    public UserDto findByEmail(String email) {
+        return toUserDto(userRep.getByEmail(email));
     }
 
     @LogInvocation
     @Override
     public UserDto login(String email, String password) {
-        try {
-            UserDto userDto = getByEmail(email);
-            if (userDto == null) {
-                throw new RuntimeException("Incorrect email or password");
-            }
-            String hashedPassword = DigestUtil.INSTANCE.hash(password);
-            if (!userDto.getPassword().equals(hashedPassword)) {
-                throw new RuntimeException("Incorrect email or password");
-            }
-            return userDto;
-        } catch (DaoException e) {
-            throw new ServiceException(e);
+        UserDto userDto = findByEmail(email);
+        if (userDto == null) {
+            throw new ServiceException("Incorrect email or password");
         }
+        String hashedPassword = digestUtil.hash(password);
+        if (!userDto.getPassword().equals(hashedPassword)) {
+            throw new ServiceException("Incorrect email or password");
+        }
+        return userDto;
     }
 
     private User toUserEntity(UserDto userDto) {
@@ -159,32 +116,32 @@ public class UserServiceImpl implements UserService {
         }
     }
 
-    private static void setUserLastName(UserDto userDto, User user) {
+    private void setUserLastName(UserDto userDto, User user) {
         if (userDto.getLastName() != null) {
             user.setLastName(userDto.getLastName());
         }
     }
 
-    private static void setUserAge(UserDto userDto, User user) {
+    private void setUserAge(UserDto userDto, User user) {
         if (userDto.getAge() != null) {
             user.setAge(userDto.getAge());
         }
     }
 
-    private static void setUserEmail(UserDto userDto, User user) {
+    private void setUserEmail(UserDto userDto, User user) {
         if (userDto.getEmail() != null) {
             user.setEmail(userDto.getEmail());
         }
     }
 
-    private static void setUserPassword(UserDto userDto, User user) {
+    private void setUserPassword(UserDto userDto, User user) {
         if (userDto.getPassword() != null) {
-            String hashedPassword = DigestUtil.INSTANCE.hash(userDto.getPassword());
+            String hashedPassword = digestUtil.hash(userDto.getPassword());
             user.setPassword(hashedPassword);
         }
     }
 
-    private static void setUserRole(UserDto userDto, User user) {
+    private void setUserRole(UserDto userDto, User user) {
         if (userDto.getRoleDto() == null) {
             userDto.setRoleDto(UserDto.RoleDto.USER);
         }
@@ -204,8 +161,8 @@ public class UserServiceImpl implements UserService {
         return userDto;
     }
 
-    private void checkCreateExistsByEmail(UserDto userDto) throws DaoException {
-        User existing = userRepository.getByEmail(userDto.getEmail());
+    private void checkCreateExistsByEmail(UserDto userDto){
+        User existing = userRep.getByEmail(userDto.getEmail());
         if (existing != null) {
             throw new RuntimeException("User with Email " + userDto.getEmail() + "already exists.");
         }
